--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.5.0",
     "@prisma/client": "^5.11.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "axios": "^1.6.2",
     "bcrypt": "^5.0.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "date-fns": "^3.4.0",
     "gray-matter": "^4.0.3",
+    "lucide-react": "^0.427.0",
     "next": "^14.1.3",
     "next-auth": "^4.24.5",
     "next-themes": "^0.3.0",
@@ -29,7 +34,9 @@
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "stripe": "^14.7.0",
-    "tailgrids": "^2.1.0"
+    "tailgrids": "^2.1.0",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
