--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.427.0",
     "next": "^14.1.3",
     "next-auth": "^4.24.5",
+    "next-intl": "^3.17.4",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.12",
     "prettier": "^3.1.0",
