--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-auth": "^4.24.5",
     "next-intl": "^3.17.4",
     "next-themes": "^0.3.0",
+    "nextjs-toploader": "^3.6.15",
     "nodemailer": "^6.9.12",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
